# my_lcd12864_st7565_pi_pico

./: CMakeLists.txt  Readme.md  glcd.c  glcd.h  glcdfont.c  stlcd.c  stlcd.h
.cache/clangd/index/: glcd.c.7B2A9B2FADF38CAB.idx  glcd.h.F65D875E048F0C12.idx  glcdfont.c.C5CE0C4A36FFD043.idx  stlcd.c.4DCDD1D48CA4A32E.idx  stlcd.h.4390A9664BD288CB.idx  util.h.4A4A150F3CB4B42D.idx
Readme/: md
old_code/: glcd.c  glcd.h  glcdfont.c  stlcd.c  stlcd.h  util.c  util.h
